--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>store</groupId>
     <artifactId>product-service</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.0</version>ƒ
     <name>Product Service</name>
 
     <properties>
