--- a/k8s/k8s.yaml
+++ b/k8s/k8s.yaml
@@ -1,69 +1,80 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: product_service
+  name: product-service
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: product_service
+      app: product-service
   template:
     metadata:
       labels:
-        app: product_service
+        app: product-service
     spec:
       containers:
-        - name: product_service
-          image: deenaelorra/product_service:latest
-          imagePullPolicy: Always
-          ports:
-            - containerPort: 8080
-          env:
-            - name: POSTGRES_DB
-              valueFrom:
-                configMapKeyRef:
-                  name: postgres-configmap
-                  key: POSTGRES_DB
-            - name: DATABASE_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secrets
-                  key: POSTGRES_USER
-            - name: DATABASE_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secrets
-                  key: POSTGRES_PASSWORD
-            - name: DATABASE_URL
-              value: "jdbc:postgresql://postgres:5432/$(POSTGRES_DB)"
-            - name: SPRING_CACHE_TYPE
-              value: redis
-            - name: SPRING_DATA_REDIS_HOST
-              value: redis
-            - name: SPRING_DATA_REDIS_PORT
-              value: "6379"
-          resources:
-            requests:
-              memory: "200Mi"
-              cpu: "50m"
-            limits:
-              memory: "300Mi"
-              cpu: "200m"
-
+      - name: product-service
+        image: deenaelorra/product:latest
+        imagePullPolicy: Never
+        ports:
+        - containerPort: 8080
+        env:
+        - name: POSTGRES_DB
+          valueFrom:
+            configMapKeyRef:
+              name: postgres-configmap
+              key: POSTGRES_DB
+        - name: DATABASE_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: postgres-secrets
+              key: POSTGRES_USER
+        - name: DATABASE_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: postgres-secrets
+              key: POSTGRES_PASSWORD
+        - name: DATABASE_URL
+          value: "jdbc:postgresql://postgres:5432/$(POSTGRES_DB)"
+        - name: SPRING_DATASOURCE_URL
+          value: "jdbc:postgresql://postgres:5432/$(POSTGRES_DB)"
+        - name: SPRING_DATASOURCE_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: postgres-secrets
+              key: POSTGRES_USER
+        - name: SPRING_DATASOURCE_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: postgres-secrets
+              key: POSTGRES_PASSWORD
+        - name: SPRING_DATASOURCE_DRIVER_CLASS_NAME
+          value: "org.postgresql.Driver"
+        - name: SPRING_CACHE_TYPE
+          value: redis
+        - name: SPRING_DATA_REDIS_HOST
+          value: redis
+        - name: SPRING_DATA_REDIS_PORT
+          value: "6379"
+        resources:
+          requests:
+            memory: "200Mi"
+            cpu: "50m"
+          limits:
+            memory: "300Mi"
+            cpu: "200m"
 ---
-
 apiVersion: v1
 kind: Service
 metadata:
-  name: product_service
+  name: product-service
   labels:
-    app: product_service
+    app: product-service
 spec:
   type: ClusterIP
   ports:
-    - port: 80
-      protocol: TCP
-      targetPort: 8080
-
+  - port: 80
+    protocol: TCP
+    targetPort: 8080
   selector:
-    app: product_service
+    app: product-service
