--- a/k8s/k8s.yaml
+++ b/k8s/k8s.yaml
@@ -15,7 +15,7 @@ spec:
       containers:
       - name: product-service
         image: deenaelorra/product:latest
-        imagePullPolicy: Never
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
         env:
@@ -56,6 +56,14 @@ spec:
           value: redis
         - name: SPRING_DATA_REDIS_PORT
           value: "6379"
+        - name: SPRING_FLYWAY_SCHEMAS
+          value: "product"
+        - name: SPRING_FLYWAY_CREATE_SCHEMAS
+          value: "true"
+        - name: SPRING_FLYWAY_BASELINE_ON_MIGRATE
+          value: "true"
+        - name: SPRING_JPA_PROPERTIES_HIBERNATE_DEFAULT_SCHEMA
+          value: "product"
         resources:
           requests:
             memory: "200Mi"
